k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-unit
  name: service-unit
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: service-unit
    spec:
      containers:
        - image: service-unit:0.13
          lifecycle:
            preStop:
              exec:
                command:
                  - echo
                  - preStop hook triggered
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
          name: service-unit
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
          resources:
            requests:
              cpu: 500m
              ephemeral-storage: 1Gi
              memory: 1Gi
            limits:
              cpu: 2
              ephemeral-storage: 10Gi
              memory: 4Gi
      terminationGracePeriodSeconds: 20
