k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-unit
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
