k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
  name: service-unit-ingress
spec:
  rules:
    - host: forsakeminor.com
      http:
        paths:
          - backend:
              service:
                name: service-unit
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - forsakeminor.com
      secretName: forsakeminor-tls
